--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
   <body>
     <script src="index.js"></script>
+    <script src="flowers.js"></script>
+    <script src="fish.js"></script>
+    <script src="fishfood.js"></script>
   </body>
 
   </html>
