--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <head>
     <title>Zen-Yatta</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script> -->
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
+
   </head>
   <header>
   </header>
 
   <body>
-    <script src="index.js"></script>
-    <script src="flowers.js"></script>
-    <script src="fish.js"></script>
-    <script src="fishfood.js"></script>
+    <script src="index.js "></script>
+    <script src="flowers.js "></script>
+    <script src="fish.js "></script>
+    <script src="fishfood.js "></script>
   </body>
 
   </html>
