--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
-
+    <link rel="stylesheet " type="text/css " href="index.css ">
   </head>
   <header>
   </header>
 
   <body>
-    <script src="index.js "></script>
-    <script src="flowers.js "></script>
-    <script src="fish.js "></script>
-    <script src="fishfood.js "></script>
+    <audio controls loop autoplay>
+      <source src="library/sounds/stream.mp3" type="audio/mpeg">
+    </audio>
+    <audio="mousePressed()">
+      <source src="library/sounds/blop.mp3" type="audio/mpeg">
+      </audio>
+      <script src="index.js "></script>
+      <script src="flowers.js "></script>
+      <script src="fish.js "></script>
+      <script src="fishfood.js "></script>
   </body>
 
   </html>
